--- a/staging/src/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/BUILD
+++ b/staging/src/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/BUILD
@@ -15,6 +15,7 @@ go_library(
         "register.go",
         "types.go",
         "types_jsonschema.go",
+        "webhook_config_interface.go",
         "zz_generated.deepcopy.go",
     ],
     importmap = "k8s.io/kubernetes/vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions",
@@ -24,6 +25,8 @@ go_library(
         "//staging/src/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//staging/src/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
         "//staging/src/k8s.io/apimachinery/pkg/types:go_default_library",
+        "//staging/src/k8s.io/apimachinery/pkg/util/json:go_default_library",
+        "//staging/src/k8s.io/apimachinery/pkg/util/webhook:go_default_library",
     ],
 )
 
