--- a/staging/src/k8s.io/apiextensions-apiserver/pkg/cmd/server/BUILD
+++ b/staging/src/k8s.io/apiextensions-apiserver/pkg/cmd/server/BUILD
@@ -12,8 +12,13 @@ go_library(
     importmap = "k8s.io/kubernetes/vendor/k8s.io/apiextensions-apiserver/pkg/cmd/server",
     importpath = "k8s.io/apiextensions-apiserver/pkg/cmd/server",
     deps = [
+        "//staging/src/k8s.io/apiextensions-apiserver/pkg/apiserver:go_default_library",
         "//staging/src/k8s.io/apiextensions-apiserver/pkg/cmd/server/options:go_default_library",
+        "//staging/src/k8s.io/apimachinery/pkg/util/webhook:go_default_library",
         "//staging/src/k8s.io/apiserver/pkg/server:go_default_library",
+        "//staging/src/k8s.io/apiserver/pkg/util/proxy:go_default_library",
+        "//staging/src/k8s.io/client-go/listers/core/v1:go_default_library",
+        "//staging/src/k8s.io/client-go/rest:go_default_library",
         "//vendor/github.com/spf13/cobra:go_default_library",
     ],
 )
