--- a/staging/src/k8s.io/apimachinery/pkg/util/webhook/BUILD
+++ b/staging/src/k8s.io/apimachinery/pkg/util/webhook/BUILD
@@ -5,17 +5,17 @@ go_library(
     srcs = [
         "authentication.go",
         "client.go",
+        "error.go",
         "serviceresolver.go",
     ],
     importmap = "k8s.io/kubernetes/vendor/k8s.io/apimachinery/pkg/util/webhook",
     importpath = "k8s.io/apimachinery/pkg/util/webhook",
     visibility = ["//visibility:public"],
     deps = [
-        "//staging/src/k8s.io/api/admission/v1beta1:go_default_library",
         "//staging/src/k8s.io/apimachinery/pkg/runtime:go_default_library",
+        "//staging/src/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
         "//staging/src/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
         "//staging/src/k8s.io/apimachinery/pkg/util/errors:go_default_library",
-        "//staging/src/k8s.io/apiserver/pkg/admission/plugin/webhook/errors:go_default_library",
         "//staging/src/k8s.io/client-go/rest:go_default_library",
         "//staging/src/k8s.io/client-go/tools/clientcmd:go_default_library",
         "//staging/src/k8s.io/client-go/tools/clientcmd/api:go_default_library",
